feat(search): complete global search and unlimited paging